# daqana

./: .gitignore  AAA_GRIDEXPORT_EXCLUDE.txt  AAA_README.org  CMakeLists.txt  SConscript  fit_time_offsets.C  rocsim.cc  test_fit_line_3.C
ana/: SConscript  rocsim.cc
ana/ana/: rocsim.hh
ana/ana/dict/: rocsim_linkdef.h
calibrations/: TrkAlignStraw_0_10_22.txt  TrkAlignStraw_0_10_22_v02.txt  TrkAlignStraw_0_10_22_v03.txt  TrkAlign_Station_0_10_22.txt  TrkDelayPanel.txt  TrkDelayPanel_v2.txt  TrkDelayPanel_v3.txt  TrkDelayRStraw.txt  TrkPanelMap.toml  TrkPreampStraw.txt  TrkPreampStraw_v00.txt  TrkPreampStraw_v2.txt  TrkPreampStraw_v3.txt  TrkPreampStraw_v4.txt  TrkPreampStraw_v5.txt  pulse_injection.toml
catalog/: raw.mu2e.trkvst.roctower.001370.art.files  raw.mu2e.trkvst.roctower.001371.art.files  raw.mu2e.trkvst.roctower.001375.art.files  raw.mu2e.trkvst.roctower.001377.art.files  raw.mu2e.trkvst.roctower.001378.art.files  raw.mu2e.trkvst.roctower.001379.art.files  raw.mu2e.trkvst.roctower.001380.art.files  raw.mu2e.trkvst.roctower.001381.art.files  raw.mu2e.trkvst.roctower.001382.art.files  raw.mu2e.trkvst.roctower.001384.art.files  raw.mu2e.trkvst.roctower.105127.art.files  raw.mu2e.trkvst.roctower.105129.art.files  raw.mu2e.trkvst.roctower.105141.art.files  raw.mu2e.trkvst.roctower.105148.art.files  raw.mu2e.trkvst.roctower.105228.art.files  raw.mu2e.trkvst.roctower.105230.art.files  raw.mu2e.trkvst.roctower.105249.art.files  raw.mu2e.trkvst.roctower.105252.art.files  raw.mu2e.trkvst.roctower.105253.art.files  raw.mu2e.trkvst.roctower.105261.art.files  raw.mu2e.trkvst.roctower.105269.art.files  raw.mu2e.trkvst.roctower.105270.art.files  raw.mu2e.trkvst.tstation.002393.art.files  raw.mu2e.trkvst.tstation.002394.art.files  raw.mu2e.trkvst.tstation.002395.art.files  raw.mu2e.trkvst.tstation.002397.art.files  raw.mu2e.trkvst.tstation.002402.art.files  raw.mu2e.trkvst.tstation.105149.art.files  raw.mu2e.trkvst.tstation.105150.art.files  raw.mu2e.trkvst.tstation.105271.art.files  raw.mu2e.trkvst.tstation.105272.art.files  raw.mu2e.trkvst.tstation.105298.art.files  raw.mu2e.trkvst.tstation.105299.art.files  raw.mu2e.trkvst.tstation.105310.art.files  raw.mu2e.trkvst.tstation.105312.art.files  raw.mu2e.trkvst.tstation.105316.art.files  raw.mu2e.trkvst.tstation.105317.art.files  raw.mu2e.trkvst.tstation.105318.art.files  raw.mu2e.trkvst.tstation.105356.art.files  raw.mu2e.trkvst.tstation.art.002386.files  (+1 more)
daqana/: mod  obj
datasets/: raw.mu2e.trkvst.annex.000281.art.files  raw.mu2e.trkvst.annex.105068.art.files  raw.mu2e.trkvst.annex.105069.art.files  raw.mu2e.trkvst.annex.105070.art.files
datasets/vst00b0/: daqana.vst00b0.org  geom_daqana_vst00b0.txt  init_project.py  s1_cosmic_reco_vst00b0.fcl  s1_make_dgn_vst00b0.fcl  s1_reco_vst00b0.fcl  s5_stn_reco_vst00b0.fcl  write_gdml_vst00b0.fcl
datasets/vst00b0/catalog/: rec.mu2e.vst00s0s10r0000.daqana.art.files.107995
datasets/vst03s0/: init_project.py  s1_cosmic_reco_vst03s0.fcl  s1_make_dgn_vst03s0.fcl
datasets/vst03s0/catalog/: nts.murat.vst03s0s10r0000.daqana.root.files.107995  rec.mu2e.vst03s0s10r0000.daqana.art.files.107995
datasets/vst04s0/: geom_daqana_vst04s0.txt  init_project.py  s1_cosmic_reco_vst04s0.fcl  s1_make_dgn_vst04s0.fcl
datasets/vst05s0/: init_project.py  s1_cosmic_reco_vst05s0.fcl  s1_make_dgn02_vst05s0.fcl  s1_make_dgn_vst05s0.fcl  write_gdml_vst05s0.fcl
datasets/vst06s0/: init_project.py  s1_cosmic_reco_vst06s0.fcl  s1_make_dgn02_vst06s0.fcl  s1_make_dgn_vst06s0.fcl  write_gdml_vst06s0.fcl
datasets/vst07s0/: init_project.py  s1_cosmic_reco_vst07s0.fcl  s1_make_dgn02_vst07s0.fcl  s1_make_dgn_vst07s0.fcl  write_gdml_vst07s0.fcl
doc/: daqana.org  sql_queries.org
fcl/: cal_fragment_ana.fcl  calibration_set_v0.fcl  calibration_set_v1.fcl  calibration_set_v2.fcl  calibration_set_v3.fcl  calibration_set_v4.fcl  calibration_set_v5.fcl  calibration_set_v6.fcl  calibration_set_v7.fcl  calibration_set_v8.fcl  calibration_set_v9.fcl  cosmic_reco.fcl  debug_trk_fragment_ana.fcl  diag_trk_fragment_ana.fcl  dump_fragments.fcl  file_catalog.fcl  filter_straw_digis.fcl  filter_straw_hits.fcl  filter_time_clusters.fcl  geom_daqana_common.txt  hex1_dump.fcl  hex_dump.fcl  hex_dump_trk.fcl  kkline.fcl  make_digi_ntuple.fcl  make_digi_ntuple_pre_107247.fcl  make_n001.fcl  make_n002.fcl  make_n003.fcl  make_n004.fcl  make_r001n003.fcl  make_r011n003.fcl  make_r111n003.fcl  make_station_hist.fcl  make_station_hist_060.fcl  make_station_hist_100.fcl  make_straw_hits.fcl  make_time_clusters.fcl  print.fcl  print_straw_digis.fcl  (+66 more)
mod/: CMakeLists.txt  CalFragmentAna_module.cc  CaloDigiAnalyzerExample_module.cc  DaqanaFilter_module.cc  FileCatalog_module.cc  MakeDigiNtuple_module.cc  SConscript  StationAna_module.cc  TCLineFilter_module.cc  TFileService-76c0-4e3e-45c9-9a27.root  TFileService-ac19-914c-a90a-db31.root  TrackerDQM_module.CC  TrackerDQM_module.cc  TrkFragmentAna_module.cc
mod/mod/: CalFragmentAna_module.hh  Linkdef.h  StationAna_module.hh  TrackerDQM_module.hh  TrkFragmentAna_module.hh  TrkPanelMap_t.hh  WfParam_t.hh
mod/mod/dict/: CalFragmentAna_module_linkdef.h  TrkFragmentAna_module_linkdef.h
mod/scripts/: display_waveforms.C
parsed/: run_duration.txt
scripts/: #list_files#  .source_me  booking.C  compare_calibrations.C  create_links.sh  daqana_nt_format.hh  daqana_nt_init.C  daqana_utils.C  debug_event.sh  digis.C  digis.h  filter_straw_hits.sh  fit_bl_width.C  fit_c2c_drho.C  fit_dr_vs_straw.C  fit_drho_vs_rdrift.C  fit_dt01_msh.C  fit_segment.mac  fit_station_ana_dtchg_hist.C  fit_time_offsets.C  list_files  make_digi_ntuple.py  make_digi_ntuple.sh  make_station_hist.py  make_station_hist.sh  make_trk_fragment_ana_hist.sh  panel_geometry.C  plot.C  plot_hist.C  plot_n001.C  plot_n001_hist_001.C  plot_n001_hist_001.h  plot_n001_hist_002.C  plot_n001_hist_002.h  plot_nhits_per_panel.C  plot_station_ana_hist.C  plot_tc.C  rdm_copy.sh  read_combohits.C  read_combohits_2.C  (+11 more)
test/: CMakeLists.txt  test3.cc
test/test/: Linkdef.h  station0_heptransform.hh  test3.hh
(+14 files in other folders)
