#
set (subpkg "mod"                  )
set (dict   "daqana_${subpkg}_dict")
set (lib    "daqana_${subpkg}"     )

include_directories(
  $ENV{ROOTSYS}/include/root
  $ENV{SPACK_VIEW}/include
  ${CMAKE_SOURCE_DIR}/
  ${CMAKE_CURRENT_SOURCE_DIR}/${subpkg}
)

# link_directories($ENV{ROOTSYS}/lib)

set (include_files
#  CalFragmentAna_module.hh
#  TrkFragmentAna_module.hh
)

# ROOT_GENERATE_DICTIONARY(${dict} ${include_files} LINKDEF ${subpkg}/Linkdef.h)
# set_property(SOURCE ${dict}.cxx PROPERTY generated)

cet_build_plugin(TrkFragmentAna art::module LIBRARIES REG
  Stntuple_mod
  #   Stntuple_gui
  Stntuple_print
  Stntuple_geom
  Stntuple_obj
  Stntuple_base
  Offline::Mu2eUtilities
  Offline::RecoDataProducts
  art_root_io::TFileService_service
  artdaq-core-mu2e::Data
  ROOT::Hist
  ROOT::Tree
  ROOT::Core
  ROOT::RIO
  ROOT::Gui
)

cet_build_plugin(FileCatalog art::module LIBRARIES REG
  Stntuple_mod
  #   Stntuple_gui
  Stntuple_print
  Stntuple_geom
  Stntuple_obj
  Stntuple_base
  Offline::RecoDataProducts
  art_root_io::TFileService_service
  artdaq-core-mu2e::Data
  ROOT::Hist
  ROOT::Tree
  ROOT::Core
  ROOT::RIO
  ROOT::Gui
)

cet_build_plugin(StationAna art::module LIBRARIES REG
  Stntuple_mod
  #   Stntuple_gui
  Stntuple_print
  Stntuple_geom
  Stntuple_obj
  Stntuple_base
  Offline::RecoDataProducts
  art_root_io::TFileService_service
  artdaq-core-mu2e::Data
  ROOT::Hist
  ROOT::Tree
  ROOT::Core
  ROOT::RIO
  ROOT::Gui
)

cet_build_plugin(MakeDigiNtuple art::module LIBRARIES REG
  daqana_obj
  Offline::Mu2eUtilities
  Offline::RecoDataProducts
  art_root_io::TFileService_service
  artdaq-core-mu2e::Data
  ROOT::Hist
  ROOT::Tree
  ROOT::Core
  ROOT::RIO
  ROOT::Gui
)

set (source_files
#   autogenerated.cc
#   addStntupleDataBlocks.cc 
#   InitCalDataBlock.cc InitClusterBlock.cc InitCrvClusterBlock.cc InitCrvPulseBlock.cc
#   InitGenpBlock.cc InitHeaderBlock.cc InitHelixBlock.cc InitPidBlock.cc InitSimpBlock.cc
#   InitStepPointMCBlock.cc
#   InitStrawHitBlock.cc InitTimeClusterBlock.cc
#   InitTrackBlock.cc InitTrackBlock_KK.cc InitTrackSeedBlock.cc InitTrackStrawHitBlock.cc
#   InitTriggerBlock.cc InitVDetDataBlock.cc
#   StntupleModule.cc
#   StntupleUtilities.cc TAnaRint.cc THistModule.cc TModule.cc
)
# add_library(${lib} SHARED ${source_files} ${dict}.cxx)

# 
# target_link_libraries(${lib}
#   Stntuple_print
#   Stntuple_geom
#   Stntuple_obj
#   Stntuple_base
#   
#   Offline::RecoDataProducts
#   Offline::MCDataProducts
#   Offline::DataProducts
#   Offline::CalorimeterGeom
#   
#   art::Framework_Core
#   art::Framework_Services_Registry
#   art::Framework_Principal
#   art::Persistency_Common
#   art::Persistency_Provenance
#   art::Utilities
# 
#   ROOT::Physics ROOT::GenVector ROOT::Eve ROOT::Graf ROOT::Graf3d ROOT::Gui ROOT::Gpad
#   ROOT::Geom ROOT::Matrix ROOT::Rint ROOT::Core
# )

cet_add_compiler_flags(-g -O0)

# install(TARGETS ${lib})
# install_headers()
# install_source()
